baml_language/crates/baml_tests/snapshots/diagnostic_errors/attr_disambiguation/baml_tests__diagnostic_errors__attr_disambiguation__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.GAliased {
  status: user.GStatus
  role: user.GRole
  point: user.GPoint
  coord: user.GCoord
}
class user.GComplex {
  statuses: user.GStatus[]
  maybe_status: user.GStatus?
  role_or_status: user.GRole | user.GStatus
  points: user.GPoint[]
  maybe_point: user.GPoint?
  config_map: map<string, user.GConfig>
}
class user.GConfig {
  key: string
  value: string
}
class user.GCoord {
  lat: float
  lng: float
}
class user.GIncident {
  severity: user.GSeverity
  priority: user.GPriority
  title: string
  config: user.GConfig
}
class user.GPoint {
  x: float
  y: float
}
class user.GProfile {
  status: user.GStatus
  role: user.GRole
  name: string
  location: user.GPoint
  fallback: user.GCoord
}
enum user.GPriority {P0, P1, P2, P3}
enum user.GRole {Admin, User, Guest}
enum user.GSeverity {Low, Medium, High}
enum user.GSize {Small, Medium, Large}
enum user.GStatus {Active, Inactive, Pending}
function user.from_json(j: baml.json.json) -> user.GPoint  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.GProfile  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.GIncident  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.GConfig  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.GComplex  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.GCoord  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.GAliased  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
enum user.GroupF {F1, F2, F3, F4, F5, F6}
class user.MFoo {
  x: int
}
class user.OrderingModifiers {
  c1: user.MFoo?
  c2: user.MFoo?
  c3: user.MFoo[]
  c4: user.MFoo[]
  c5: user.MFoo[]?
  c6: map<string, user.MFoo>
}
function user.from_json(j: baml.json.json) -> user.MFoo  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.OrderingModifiers  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
class user.AliasInNestedTypes {
  d1: user.NFoo[]
  d2: user.NFoo[]
  d3: user.NFoo[]
  d4: map<user.NFoo, user.NBar>
  d5: map<user.NFoo, user.NBar>
  d6: user.NFoo | user.NBar[]
  d7: user.NFoo | user.NBar[]
  d8: user.NFoo[]
  d9: user.NFoo
  d10: map<string, map<user.NFoo, user.NBar>>
}
class user.NBar {
  x: int
}
class user.NFoo {
  x: int
}
function user.from_json(j: baml.json.json) -> user.NFoo  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.NBar  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.AliasInNestedTypes  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
class user.EA {
  x: int
}
class user.EB {
  x: int
}
class user.EC {
  x: int
}
class user.EFoo {
  x: int
}
type user.E1 = user.EFoo
type user.E2 = user.EFoo
type user.E3 = user.EFoo
type user.E4 = user.EA | user.EB | user.EC
function user.E5(x: user.EFoo) -> string  [expr] {
  {  } "hello"
}
function user.E6(x: user.EFoo) -> string  [expr] {
  {  } "hello"
}
function user.E7() -> user.EFoo  [expr] {
  {  } user.EFoo { x: 1 }
}
function user.E8() -> user.EFoo  [expr] {
  {  } user.EFoo { x: 1 }
}
function user.from_json(j: baml.json.json) -> user.EFoo  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.EC  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.EB  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.EA  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
class user.Fizz {
  x: int
}
class user.OrderingSimple {
  a1: user.Fizz
  a2: user.Fizz
  a3: user.Fizz
  a4: user.Fizz
  a5: user.Fizz
  a6: user.Fizz
  a7: user.Fizz
  a8: user.Fizz
  a9: user.Fizz
}
function user.from_json(j: baml.json.json) -> user.Fizz  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.OrderingSimple  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
class user.OrderingUnions {
  b1: user.UA | user.UB | user.UC
  b2: user.UA | user.UB | user.UC
  b3: user.UA | user.UB | user.UC
  b4: user.UA | user.UB | user.UC
  b5: user.UA | user.UB | user.UC
  b6: user.UA | user.UB | user.UC
  b7: user.UA | user.UB | user.UC
  b8: user.UA | user.UB | user.UC
  b9: user.UA | user.UB
  b10: user.UA | user.UB
  b11: user.UA | user.UB
  b12: user.UA | user.UB
  b13: user.UA | user.UB
  b14: user.UA | user.UB
}
class user.UA {
  x: int
}
class user.UB {
  x: int
}
class user.UC {
  x: int
}
function user.from_json(j: baml.json.json) -> user.UA  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.OrderingUnions  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.UC  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.from_json(j: baml.json.json) -> user.UB  [expr] {
  baml.json.from_string(baml.json.stringify(j))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  baml.json.parse(baml.json.to_string(self))
}
