baml_language/crates/baml_tests/snapshots/diagnostic_errors/attr_disambiguation/baml_tests__diagnostic_errors__attr_disambiguation__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
enum user.GStatus
enum user.GRole
enum user.GPriority
enum user.GSeverity
enum user.GSize
class user.GPoint {
  x: float
  y: float
}
class user.GCoord {
  lat: float
  lng: float
}
class user.GConfig {
  key: string
  value: string
}
class user.GProfile {
  status: user.GStatus
  role: user.GRole
  name: string
  location: user.GPoint
  fallback: user.GCoord
}
class user.GAliased {
  status: user.GStatus @alias("s")
  role: user.GRole @alias("r")
  point: user.GPoint @alias("p")
  coord: user.GCoord @alias("c")
}
class user.GComplex {
  statuses: user.GStatus[]
  maybe_status: user.GStatus?
  role_or_status: user.GRole | user.GStatus
  points: user.GPoint[]
  maybe_point: user.GPoint?
  config_map: map<string, user.GConfig>
}
class user.GIncident {
  severity: user.GSeverity
  priority: user.GPriority
  title: string
  config: user.GConfig
}
class user.GPoint$stream {
  x: null | float
  y: null | float
}
class user.GCoord$stream {
  lat: null | float
  lng: null | float
}
class user.GConfig$stream {
  key: null | string
  value: null | string
}
class user.GProfile$stream {
  status: null | user.GStatus
  role: null | user.GRole
  name: null | string
  location: null | user.GPoint$stream
  fallback: null | user.GCoord$stream
}
class user.GAliased$stream {
  status: null | user.GStatus @alias("s")
  role: null | user.GRole @alias("r")
  point: null | user.GPoint$stream @alias("p")
  coord: null | user.GCoord$stream @alias("c")
}
class user.GComplex$stream {
  statuses: user.GStatus[]
  maybe_status: null | user.GStatus
  role_or_status: null | user.GRole | user.GStatus
  points: user.GPoint$stream[]
  maybe_point: null | user.GPoint$stream
  config_map: map<string, user.GConfig$stream>
}
class user.GIncident$stream {
  severity: null | user.GSeverity
  priority: null | user.GPriority
  title: null | string
  config: null | user.GConfig$stream
}
enum user.GroupF
class user.MFoo {
  x: int
}
class user.OrderingModifiers {
  c1: user.MFoo?
  c2: user.MFoo? @alias("c2_alias")
  c3: user.MFoo[]
  c4: user.MFoo[] @alias("c4_alias")
  c5: user.MFoo[]? @alias("c5_alias")
  c6: map<string, user.MFoo> @alias("c6_alias")
}
class user.MFoo$stream {
  x: null | int
}
class user.OrderingModifiers$stream {
  c1: user.MFoo?
  c2: user.MFoo? @alias("c2_alias")
  c3: user.MFoo[]
  c4: user.MFoo[] @alias("c4_alias")
  c5: user.MFoo[]? @alias("c5_alias")
  c6: map<string, user.MFoo> @alias("c6_alias")
}
class user.NFoo {
  x: int
}
class user.NBar {
  x: int
}
class user.AliasInNestedTypes {
  d1: user.NFoo[] @alias("d1_alias")
  d2: user.NFoo[]
  d3: user.NFoo[]
  d4: map<user.NFoo, user.NBar>
  d5: map<user.NFoo, user.NBar>
  d6: (user.NFoo | user.NBar)[]
  d7: (user.NFoo | user.NBar)[] @alias("d7_alias")
  d8: user.NFoo[]
  d9: user.NFoo @alias("d9_outer")
  d10: map<string, map<user.NFoo, user.NBar>>
}
class user.NFoo$stream {
  x: null | int
}
class user.NBar$stream {
  x: null | int
}
class user.AliasInNestedTypes$stream {
  d1: user.NFoo$stream[] @alias("d1_alias")
  d2: user.NFoo$stream[]
  d3: user.NFoo$stream[]
  d4: map<user.NFoo, user.NBar$stream>
  d5: map<user.NFoo, user.NBar$stream>
  d6: (user.NFoo$stream | user.NBar$stream)[]
  d7: (user.NFoo$stream | user.NBar$stream)[] @alias("d7_alias")
  d8: user.NFoo[]
  d9: null | user.NFoo$stream @alias("d9_outer")
  d10: map<string, map<user.NFoo, user.NBar$stream>>
}
class user.EFoo {
  x: int
}
class user.EA {
  x: int
}
class user.EB {
  x: int
}
class user.EC {
  x: int
}
type user.E1 = user.EFoo
type user.E2 = user.EFoo
type user.E3 = user.EFoo
type user.E4 = user.EA | user.EB | user.EC
function user.E5(x: user.EFoo) -> string throws never {
  { : "hello"
    "hello" : "hello"
  }
}
function user.E6(x: user.EFoo) -> string throws never {
  { : "hello"
    "hello" : "hello"
  }
}
function user.E7() -> user.EFoo throws never {
  { : user.EFoo
    EFoo { x: 1 } : user.EFoo
  }
}
function user.E8() -> user.EFoo throws never {
  { : user.EFoo
    EFoo { x: 1 } : user.EFoo
  }
}
class user.EFoo$stream {
  x: null | int
}
class user.EA$stream {
  x: null | int
}
class user.EB$stream {
  x: null | int
}
class user.EC$stream {
  x: null | int
}
type user.E1$stream = user.EFoo$stream
type user.E2$stream = user.EFoo$stream
type user.E3$stream = user.EFoo$stream
type user.E4$stream = user.EA$stream | user.EB$stream | user.EC$stream
class user.Fizz {
  x: int
}
class user.OrderingSimple {
  a1: user.Fizz
  a2: user.Fizz @alias("a2_alias")
  a3: user.Fizz @alias("a3_alias")
  a4: user.Fizz @alias("a4_alias")
  a5: user.Fizz @alias("a5_alias") @description("a5 desc")
  a6: user.Fizz @alias("a6_alias")
  a7: user.Fizz
  a8: user.Fizz @alias("a8_alias") @description("a8 desc")
  a9: user.Fizz @alias("a9_alias")
}
class user.Fizz$stream {
  x: null | int
}
class user.OrderingSimple$stream {
  a1: user.Fizz
  a2: null | user.Fizz$stream @alias("a2_alias")
  a3: user.Fizz @alias("a3_alias")
  a4: user.Fizz @alias("a4_alias")
  a5: user.Fizz @alias("a5_alias") @description("a5 desc")
  a6: user.Fizz @alias("a6_alias")
  a7: user.Fizz
  a8: null | user.Fizz$stream @alias("a8_alias") @description("a8 desc")
  a9: user.Fizz @alias("a9_alias")
}
class user.UA {
  x: int
}
class user.UB {
  x: int
}
class user.UC {
  x: int
}
class user.OrderingUnions {
  b1: user.UA | user.UB | user.UC
  b2: user.UA | user.UB | user.UC
  b3: user.UA | user.UB | user.UC
  b4: user.UA | user.UB | user.UC @alias("b4_alias")
  b5: user.UA | user.UB | user.UC
  b6: user.UA | user.UB | user.UC
  b7: user.UA | user.UB | user.UC @alias("b7_alias")
  b8: user.UA | user.UB | user.UC @alias("b8_alias")
  b9: user.UA | user.UB
  b10: user.UA | user.UB @alias("b10_alias")
  b11: user.UA | user.UB @alias("b11_alias")
  b12: user.UA | user.UB @alias("b12_alias")
  b13: user.UA | user.UB
  b14: user.UA | user.UB
}
class user.UA$stream {
  x: null | int
}
class user.UB$stream {
  x: null | int
}
class user.UC$stream {
  x: null | int
}
class user.OrderingUnions$stream {
  b1: user.UA | user.UB | user.UC
  b2: null | user.UA$stream | user.UB$stream | user.UC$stream
  b3: null | user.UA$stream | user.UB$stream | user.UC$stream
  b4: null | user.UA$stream | user.UB$stream | user.UC$stream @alias("b4_alias")
  b5: null | user.UA$stream | user.UB$stream | user.UC$stream
  b6: null | user.UA$stream | user.UB$stream | user.UC$stream
  b7: user.UA | user.UB | user.UC @alias("b7_alias")
  b8: null | user.UA$stream | user.UB$stream | user.UC$stream @alias("b8_alias")
  b9: user.UA | user.UB
  b10: user.UA | user.UB @alias("b10_alias")
  b11: null | user.UA$stream | user.UB$stream @alias("b11_alias")
  b12: user.UA | user.UB @alias("b12_alias")
  b13: null | user.UA$stream | user.UB$stream
  b14: null | user.UA$stream | user.UB$stream
}
