baml_language/crates/baml_tests/snapshots/diagnostic_errors/attr_disambiguation/baml_tests__diagnostic_errors__attr_disambiguation__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 25257
---
=== COMPILER2 DIAGNOSTICS ===
  [hir] Error: `@alias` is only allowed on class fields and enum variants; remove it here
    ╭─[ nested.baml:12:12 ]
    │
 12 │   d2 (NFoo @alias("d2_alias"))[]
    │            ─────────┬────────  
    │                     ╰────────── field attribute here
    │ 
    │ Note: Error code: E0106
────╯

  [hir] Error: `@alias` is only allowed on class fields and enum variants; remove it here
    ╭─[ nested.baml:18:15 ]
    │
 18 │   d4 map<NFoo @alias("d4_alias"), NBar>
    │               ─────────┬────────  
    │                        ╰────────── field attribute here
    │ 
    │ Note: Error code: E0106
────╯

  [hir] Error: `@alias` is only allowed on class fields and enum variants; remove it here
    ╭─[ nested.baml:24:12 ]
    │
 24 │   d6 (NFoo @alias("d6_alias") | NBar)[]
    │            ─────────┬────────  
    │                     ╰────────── field attribute here
    │ 
    │ Note: Error code: E0106
────╯

  [hir] Error: `@alias` is only allowed on class fields and enum variants; remove it here
    ╭─[ nested.baml:30:12 ]
    │
 30 │   d8 (NFoo @alias("d8_alias"))[] @stream.done
    │            ─────────┬────────  
    │                     ╰────────── field attribute here
    │ 
    │ Note: Error code: E0106
────╯

  [hir] Error: `@alias` is only allowed on class fields and enum variants; remove it here
    ╭─[ nested.baml:36:28 ]
    │
 36 │   d10 map<string, map<NFoo @alias("d10_alias"), NBar>>
    │                            ─────────┬─────────  
    │                                     ╰─────────── field attribute here
    │ 
    │ Note: Error code: E0106
────╯

  [hir] Error: `@alias` is only allowed on class fields and enum variants; remove it here
    ╭─[ non_field.baml:10:16 ]
    │
 10 │ type E1 = EFoo @alias("e1_alias")
    │                ─────────┬────────  
    │                         ╰────────── field attribute here
    │ 
    │ Note: Error code: E0106
────╯

  [hir] Error: `@alias` is only allowed on class fields and enum variants; remove it here
    ╭─[ non_field.baml:16:16 ]
    │
 16 │ type E3 = EFoo @alias("e3_alias") @stream.done
    │                ─────────┬────────  
    │                         ╰────────── field attribute here
    │ 
    │ Note: Error code: E0106
────╯

  [hir] Error: `@alias` is only allowed on class fields and enum variants; remove it here
    ╭─[ non_field.baml:19:24 ]
    │
 19 │ type E4 = EA | EB | EC @alias("e4_alias")
    │                        ─────────┬────────  
    │                                 ╰────────── field attribute here
    │ 
    │ Note: Error code: E0106
────╯

  [hir] Error: `@alias` is only allowed on class fields and enum variants; remove it here
    ╭─[ non_field.baml:22:21 ]
    │
 22 │ function E5(x: EFoo @alias("e5_alias")) -> string {
    │                     ─────────┬────────  
    │                              ╰────────── field attribute here
    │ 
    │ Note: Error code: E0106
────╯

  [hir] Error: `@alias` is only allowed on class fields and enum variants; remove it here
    ╭─[ non_field.baml:32:23 ]
    │
 32 │ function E7() -> EFoo @alias("e7_alias") {
    │                       ─────────┬────────  
    │                                ╰────────── field attribute here
    │ 
    │ Note: Error code: E0106
────╯

  [hir] Error: `@alias` is only allowed on class fields and enum variants; remove it here
    ╭─[ unions.baml:22:14 ]
    │
 22 │   b5 UA | UB @alias("b5_alias") | UC
    │              ─────────┬────────  
    │                       ╰────────── field attribute here
    │ 
    │ Note: Error code: E0106
────╯

  [hir] Error: `@alias` is only allowed on class fields and enum variants; remove it here
    ╭─[ unions.baml:25:9 ]
    │
 25 │   b6 UA @alias("b6_alias") | UB | UC
    │         ─────────┬────────  
    │                  ╰────────── field attribute here
    │ 
    │ Note: Error code: E0106
────╯

  [hir] Error: `@alias` is only allowed on class fields and enum variants; remove it here
    ╭─[ unions.baml:48:16 ]
    │
 48 │   b13 UA | (UB @alias("b13_alias"))
    │                ─────────┬─────────  
    │                         ╰─────────── field attribute here
    │ 
    │ Note: Error code: E0106
────╯

  [hir] Error: `@alias` is only allowed on class fields and enum variants; remove it here
    ╭─[ unions.baml:51:16 ]
    │
 51 │   b14 (UA | UB @alias("b14_alias"))
    │                ─────────┬─────────  
    │                         ╰─────────── field attribute here
    │ 
    │ Note: Error code: E0106
────╯
