baml_language/crates/baml_tests/snapshots/diagnostic_errors/attr_disambiguation/baml_tests__diagnostic_errors__attr_disambiguation__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.E5(x: EFoo) -> string {
    load_const "hello"
    return
}

function user.E6(x: EFoo) -> string {
    load_const "hello"
    return
}

function user.E7() -> EFoo {
    alloc_instance user.EFoo
    load_const 1
    init_field .x
    return
}

function user.E8() -> EFoo {
    alloc_instance user.EFoo
    load_const 1
    init_field .x
    return
}
